--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "dependencies": {
     "body-parser": "^1.20.0",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "mongoose": "^6.3.6"
+    "mongoose": "^6.3.6",
+    "sass": "^1.52.3"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "sass:compile": "sass --watch public/css:public/css"
   },
   "name": "reagent-assistant",
   "description": "The reagent assistant is my ongoing project that I've been working on during my web development learning journey. It has started and stopped several times as learn something, attempt to implement, fail, and then try to plan it out again.",
   "version": "1.0.0",
   "main": "server.js",
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Kasib-hub/Reagent-assistant.git"
